# ITMO-CG

CG-HW-1/: .gitignore  BallComponent.cpp  BallComponent.h  CG-HW-1.cpp  CMakeLists.txt  DisplayWin32.cpp  DisplayWin32.h  Game.cpp  Game.h  InputDevice.h  MyGame.cpp  PongGame.cpp  PongGame.h  RacketComponent.cpp  RacketComponent.h  RectangleComponent.cpp  RectangleComponent.h  SquareComponent.cpp  SquareComponent.h  TriangleComponent.cpp  TriangleComponent.h  aboba.hlsl
CG-HW-1/include/components/: Game.h  MyGame.h
CG-HW-1/include/input/: InputDevice.h
CG-HW-1/include/utils/: ConstantBufferTypes.h  Delegates.h  DisplayWin32.h
CG-HW-1/src/components/: Game.cpp  RectangleComponent.cpp  SquareComponent.cpp  TriangleComponent.cpp
CG-HW-1/src/utils/: SimpleMath.cpp
CG-HW-2/: BallComponent.h  CG-HW-1.cpp  CMakeLists.txt  ConstantBuffer.h  DisplayWin32.cpp  Game.cpp  Game.h  GameComponent.h  PongGame.cpp  RacketComponent.h  TriangleComponent.cpp  TriangleComponent.h
CG-HW-2/include/components/: RectangleComponent.h
CG-HW-2/src/components/: BallComponent.cpp  Game.cpp  RacketComponent.cpp  RectangleComponent.cpp
CG-HW-2/src/utils/: DisplayWin32.cpp
CG-HW-3/: CG-HW-1.cpp  CMakeLists.txt  GridPixelShader.hlsl  MyGame.cpp  OrbitPixelShader.hlsl  TextureShader.hlsl
CG-HW-3/include/camera/: Camera.h
CG-HW-3/include/components/: Game.h  GridComponent.h  OrbitComponent.h  RectangleComponent.h  SphereComponent.h
CG-HW-3/include/input/: InputDevice.h
CG-HW-3/include/utils/: ConstantBuffer.h  ConstantBufferTypes.h  DirectXHelpers.h  LoaderHelpers.h  PlanetConstants.h  pch.h
CG-HW-3/src/components/: Game.cpp  GridComponent.cpp  OrbitComponent.cpp  RectangleComponent.cpp  SphereComponent.cpp  TriangleComponent.cpp
CG-HW-3/src/input/: InputDevice.cpp
CG-HW-3/src/utils/: DisplayWin32.cpp
CG-HW-4/: CMakeLists.txt  MyGame.cpp  TextureShader.hlsl  aboba.hlsl
CG-HW-4/include/camera/: Camera.h
CG-HW-4/include/components/: Aboba.h  Game.h  MyGame.h  PlaneComponent.h  RectangleComponent.h  SphereComponent.h  TriangleComponent.h
CG-HW-4/include/utils/: ConstantBuffer.h  Mesh.h  Vertex.h
CG-HW-4/src/camera/: Camera.cpp
CG-HW-4/src/components/: Aboba.cpp  Game.cpp  (+4 more)
HW_1/: CMakeLists.txt  MySuper3DApp.cpp  README.md
(+4 files in other folders)
